--- a/.gitignore
+++ b/.gitignore
@@ -132,9 +132,10 @@ dmypy.json
 .DS_Store
 
 # Advent of Code data files
-data/
+*/data/
 
 # ignoring DataSpell directory
-.idea/
+*/.idea/
 
-day19/out/
+# 2022 Day 19 classes
+2022/day19/out/
